--- a/_posts/2010-10-17-quote-of-day-fish.html
+++ b/_posts/2010-10-17-quote-of-day-fish.html
@@ -13,4 +13,4 @@ blogger_id: tag:blogger.com,1999:blog-5442825777886761537.post-53496497590162778
 blogger_orig_url: http://stickmanscorral.blogspot.com/2010/10/quote-of-day-fish.html
 ---
 
-<u><a href="{{ site.baseurl }}{% post_url 2010-10-17-paul-collier-talk-on-plundered-planet %}">Speaking of</u></a> life in the oceans...<br /><blockquote>"Sharks are just evil bastards. I'm quite happy if all the sharks just went, because they eat fish and us... And we need the fish." (<a href="https://www.youtube.com/watch?v=5ND_n9i3DkQ"><u>Eddie Izzard</u></a>)</blockquote>
+<u><a href="{{ site.baseurl }}{% post_url 2010-10-17-paul-collier-talk-on-plundered-planet %}">Speaking of</u></a> life in the oceans...<br /><blockquote>"Sharks are just evil bastards. I'm quite happy if all the sharks just went, because they eat fish and us... And we need the fish." (<u><a href="https://www.youtube.com/watch?v=5ND_n9i3DkQ">Eddie Izzard</u></a>)</blockquote>
